--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </font>
 </p ALIGN=CENTER> <color="red" font size="5"> Faccio rumore anche stando zitta. Il problema non sono io, è l’ombra che faccio alla vostra mediocrità </p>
 <Font face="Arial" color="yellow" size="5" </font>
-<img src="ilaria.index.jpeg"width="200" height="250">
+<img src="ilaria.index.jpeg" width="80%">
 <p>
 </BODY>
 </HTML>
