--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
 <Font face="Arial" color="yellow" size="5" </font>
 <img src="ilaria.index.jpeg" width="80%">
 <p>
+<a href="https://paypal.me/ilariagarcia" target="_blank">
+  <button style="background-color: #0070ba; color: white; padding: 10px 20px; border: none; border-radius: 8px; font-size: 16px; cursor: pointer;">
+    Fai una Donazione con PayPal
+  </button>
+</a>
 </BODY>
 </HTML>
