--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="Keywords" content="Diva, Queen, Perfezione, Ilaria S">
 <TITLE>La queen per eccellenza</TITLE>
 <script defer data-domain="ilaria.github.io" src="https://plausible.io/js/script.js"></script>
+<script src="sw.js"></script>
 </HEAD>
 <BODY bgcolor="#F04E98"
 <h1 ALIGN=CENTER> le queen come noi insegnano, sono indipendenti, forti e spesso sono molto invidiate sopratutto Ilaria la diva </h2>
